# mesos-rs

./: Cargo.toml  README.md
examples/: scheduler.rs
src/: lib.rs  recordio.rs  scheduler.rs  scheduler_client.rs  scheduler_event_stream.rs  scheduler_router.rs  util.rs
src/proto/: mesos.rs  mod.rs  scheduler.proto  scheduler.rs
test/: test_scheduler.rs
