[package]
authors = ["Tyler Neely <t@jujit.su>", "Marcel Neuhausler"]
description = "Mesos library using the new HTTP API"
homepage = "https://github.com/spacejam/mesos-rs"
keywords = ["mesos", "HA", "distributed-systems", "containers", "scheduler"]
license = "Apache-2.0"
name = "mesos"
version = "0.3.1"

[dependencies]
crossbeam = "0.2.10"
hyper = "0.9.10"
itertools = "0.4.19"
protobuf = "1.0.24"
time = "0.1.35"

[[test]]
name = "test"
path = "test/test.rs"
